<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="menu_settings">Settings</string>
    <string name="title_main_activity">SimpleImageTextList</string>
    <string name="image">Image thumbnail</string>
    <string name="app_name">ReportLocation</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_game">MainGameActivity</string>
    <string name="title_activity_post_login">PostLoginActivity</string>
    <string name="deleteMe">Main Game Activity</string>
    <string name="welcomeString">Welcome to the game! return to the home screen to login and begin playing!</string>
    <string name="logoff">Logoff</string>
    <string name="attack">Attack!</string>
    <string name="j">j</string>
    <string name="k">k</string>
    <string name="l">l</string>
    <string name="title_activity_map">mapActivity</string>
    <string name="refreshButton">Refresh</string>
    <string name="start_game_button">start_game_button</string>
    <string name="button_3_main_menu">button_3_main_menu</string>
    <string name="button_2_main_menu">button_2_main_menu</string>
    <string name="button_1_main_menu">button_1_main_menu</string>
    <string name="debug_main_menu">debug_main_menu</string>
    <string name="title_activity_main_menu">title_activity_main_menu</string>
    <string name="title_game_activity">title_game_activity</string>
    <string name="title_bt_connect_activity">title_bt_connect_activity</string>
    <string name="title_activity_monster_select">monsterSelectActivity</string>
    <string name="monsterOneImage">monsterOne</string>
    <string name="monsterTwoImage">monsterTwoImage</string>
    <string name="MonsterThreeImage">monsterThreeImage</string>

</resources>
