<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.root.reportlocation.MainGameActivity"
    android:id="@+id/MainGameActivity">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainMap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_above="@+id/attackButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attack"
        android:id="@+id/attackButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="131dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logoff"
        android:id="@+id/logoffButton"
        android:layout_above="@+id/imageThree"
        android:layout_alignLeft="@+id/refreshButton"
        android:layout_alignStart="@+id/refreshButton" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageOne"
        android:src="@android:drawable/ic_menu_help"
        android:contentDescription="@string/j"
        android:layout_above="@+id/logoffButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageTwo"
        android:src="@android:drawable/ic_menu_help"
        android:contentDescription="@string/k"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/attackButton" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageThree"
        android:src="@android:drawable/ic_menu_help"
        android:contentDescription="@string/l"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refreshButton"
        android:id="@+id/refreshButton"
        android:layout_below="@+id/imageTwo"
        android:layout_alignRight="@+id/attackButton"
        android:layout_alignEnd="@+id/attackButton" />

</RelativeLayout>
