<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="341dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/imageView"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:contentDescription="@string/monsterOneImage" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/imageView2"
            android:layout_alignTop="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/monsterTwoImage" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/imageView3"
            android:layout_alignTop="@+id/imageView2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            android:contentDescription="@string/MonsterThreeImage" />
    </RelativeLayout>

</LinearLayout>